k8s/tailscale-proxy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tailscale-proxy
  namespace: dev-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tailscale-proxy
  serviceName: tailscale-proxy
  template:
    metadata:
      labels:
        app: tailscale-proxy
    spec:
      serviceAccountName: tailscale
      containers:
        - name: tailscale
          image: ghcr.io/tailscale/tailscale:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: tailscale-state
              mountPath: /var/lib/tailscale
            - name: serve-config
              mountPath: /etc/tailscale
      volumes:
        - name: serve-config
          configMap:
            name: tailscale-serve-config
  volumeClaimTemplates:
    - metadata:
        name: tailscale-state
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
