k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codejourney
  namespace: dev-testing
spec:
  selector:
    app: codejourney
  ports:
    - port: 80
      targetPort: 3000
