k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codejourney
  namespace: dev-testing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: codejourney.192.168.0.45.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codejourney
                port:
                  number: 80
